quorum/test/tests/other/Pass/CastExpression.quorum
class Main
    action Main
        integer k = cast(integer, (1.0 * 7.0 * 1.0) - 2.0)
        output k
    end
end