quorum/test/tests/other/Fail/AssignmentToUndeclaredVariable.quorum
class Main
    paytype = 7

    action Main
        integer i = 5.4
    end
end